--- a/backend/web/edu-assets/css/main.css
+++ b/backend/web/edu-assets/css/main.css
@@ -15,7 +15,7 @@
     /*--color-blue: #0E86FE;*/
     /*--color-blue: #015c92;*/
     /*--color-blue: rgba(53, 79, 149, 1);*/
-    --color-blue: #09588E;
+    --color-blue: #021B66;
     /*--color-blue: #1d679f;*/
     --color-basic: #c1dadf;
     --color-white: #ffffff;
@@ -31,7 +31,7 @@
     --color-label: #787F95;
 
     /*--link-hover: rgba(53, 79, 149, 1);*/
-    --link-hover: #09588E;
+    --link-hover: #021B66;
 
     --fs14: 14px;
 
