--- a/frontend/web/css/style.css
+++ b/frontend/web/css/style.css
@@ -399,12 +399,12 @@
     display: block;
     position: relative;
     overflow: hidden;
-    background: rgb(214,39,39);
-    background: linear-gradient(0deg, rgba(214,39,39,1) 0%, rgba(9,88,142,1) 2%);
+    background: #FDB338;
+    background: linear-gradient(0deg,rgba(253, 179, 56, 1) 0%, rgba(2, 27, 102, 1) 2%);
 }
 
 .mb_head_left img {
-    width: 180px;
+    width: 150px;
 }
 
 
@@ -416,9 +416,8 @@
 .mb_vector_img {
     position: absolute;
     right: 0;
-    top: 0;
     bottom: 0;
-    height: 100%;
+    height: 60%;
     z-index: 1;
 }
 .line_white {
@@ -848,6 +847,9 @@
     .ik_nav_pills .nav-link {
         display: block;
         width: 100%;
+    }
+    .mb_vector_img {
+        display: none;
     }
 }
 
