--- a/frontend/web/css/main.css
+++ b/frontend/web/css/main.css
@@ -6,10 +6,10 @@
     box-sizing: border-box;
 }
 :root {
-    --bg-color: #09588E;
+    --bg-color: #021B66;
     /*--main-color: #1c89c1;*/
     --main-color2: #244e7a;
-    --main-color: #09588E;
+    --main-color: #021B66;
     /*--logo-color: #1c89c1;*/
     --logo-color: #1c89c1;
     --red-color: #8D1E1C;
