hesder color update

--- a/frontend/web/css/main.css
+++ b/frontend/web/css/main.css
@@ -12,7 +12,7 @@
     --main-color: #021B66;
     /*--logo-color: #1c89c1;*/
     --logo-color: #1c89c1;
-    --red-color: #8D1E1C;
+    --red-color: #fdb338;
     --color-text: #001b48;
     --color-label: #787F95;
     --yellow: #25C172;
